Edited the database to have some fixed assets for a single item  Added some CSS to the tabs  Fixed the grouping of 4 reviews to work with numbers not divisible by 4

--- a/public/style.css
+++ b/public/style.css
@@ -40,7 +40,6 @@
   border-radius: 90px;      
 }
 
-
 .stars {    
   font-size: 14px;
   order: 2; 
@@ -72,9 +71,7 @@
   cursor: pointer; 
 }
 
-
-
-.body-image{
+.body-image {
   display: flex;
   flex-direction: row;
   align-content: space-between;
@@ -92,5 +89,45 @@
   order: 4;
   width: 125px;
   height: 125px;
-  border-radius: 10px;    
+  border-radius: 10px;     
+}
+
+.purchased-description {
+  margin-left: 50px;
+  font-size: 14px;
+}
+
+.tabs {
+  display: flex;
+  flex-direction: row;    
+  width: 564px;
+  line-height: 0;  
+  font-family: "Darker Grotesque", sans-serif;
+  font-size: 16px;
+}
+.tab {  
+  padding-bottom: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 225px;
+  background-color: white;
+  border: none;
+  border-bottom: 5px solid rgb(226, 226, 226);
+}
+
+.tab:hover {
+border-bottom: 5px solid rgb(177, 177, 177)
+}
+.tab:active{
+  border-bottom: 5px solid rgb(0, 0, 0)
+}
+
+.tab-review-number {
+  margin-left: 10px;
+  border-radius: 13px;
+  background-color: rgb(226, 226, 226);  
+  padding: 8px;
+  padding-right: 8px;
+  padding-left: 8px;  
 }
